--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
         "--image",
         "gcr.io/$PROJECT_ID/colo-splits",
         "--region",
-        "us-central1",
+        "us-west2",
         "--platform",
         "managed",
         "--allow-unauthenticated",
